my-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-k8s-app
  namespace: java-k8s
  labels:
    app: java-k8s-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-k8s-app
  template:
    metadata:
      labels:
        app: java-k8s-app
    spec:
      containers:
        - name: java-k8s-app
          image: ghcr.io/rodrigonascimento001/java-k8s/java-k8s:cc96011c809ef7019cf2ffedb038c7e89f14afcf
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      imagePullSecrets:
        - name: ghcr-secret
